# gnome_podcasts

./: Cargo.toml
podcasts-data/src/: lib.rs
podcasts-main/podcasts-gtk/src/widgets/: sheet_player.rs
src/: action.rs  app.rs  app_navigation_ext.rs  app_render_ext.rs  main.rs
src/chapter_parser/: id3.rs  mod.rs
src/components/: app_menu.rs  circular_progress.rs  downloaded_episode_list_item.rs  episode_list_item.rs  found_podcast_ui.rs  main_menu_button.rs  miniplayer.rs  mod.rs  play_button.rs  player_controls.rs  podcast_search_results.rs  podcats_list_item.rs  progress_bar.rs  show_card.rs  volume_scale.rs
src/pages/: downloads.rs  home.rs  mod.rs  new.rs  page_template.rs  player_page.rs  podcast.rs  search.rs  show.rs  shows.rs
src/util/: color.rs  cover_image.rs  episode_description_parser.rs  gradient_extractor.rs  gst_errors.rs  mod.rs
src/workers/: mod.rs
src/workers/action_worker/: download_ext.rs  mod.rs  service.rs  subscribe_ext.rs
