[package]
name = "podcasts"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["podcasts-data"]

[workspace.package]
edition = "2024"

# Centralized versions managed here once
[workspace.dependencies]
anyhow = "1.0.103"
async-channel = "2.5.0"
chrono = {version = "0.4.45", features = ["serde", "unstable-locales"] }
log = "0.4.33"
reqwest = {version = "0.13.4", features = ["form"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync"] }
url = "2.5.8"
podcasts-data = { path = "podcasts-data" }

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
podcasts-data = { workspace = true }

adw = { version = "0.8.1", package = "libadwaita", features = ["v1_8"] }
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_12"] }
relm4 = { version = "0.10.1", features = ["macros", "libadwaita"] }
regex = "1.12.4"
ucs2 = "0.3.3"
gst = { version = "0.25.0-alpha.2", package = "gstreamer" }
gst-play = { version = "0.25.0-alpha.2", package = "gstreamer-play" }
gst-pbutils = { version = "0.25.0-alpha.2", package = "gstreamer-pbutils" }
pretty_env_logger = "0.5.0"


# --- OPTIMIZATION PROFILES ---

[profile.dev]
opt-level = 1 

[profile.release]
opt-level = 3           # Maximum optimizations for runtime execution speed
lto = "thin"            # Link-Time Optimization drastically speeds up global cross-crate async calls
codegen-units = 1       # Reduces parallel code generation to let the compiler optimize harder
panic = "abort"         # Removes unwind overhead (shrinks binary size considerably)
strip = true            # Automatically strips all debug symbols and tables from the final executable
